--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>WebGeo - SGC MPSBBB – AgroMap</title>
+<title>WebGeo - SGC MPS – AgroMap</title>
 
 <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><circle cx="32" cy="32" r="30" fill="%232563eb"/><g stroke="white" stroke-width="2" fill="none" opacity="0.9"><ellipse cx="32" cy="32" rx="26" ry="12"/><ellipse cx="32" cy="32" rx="12" ry="26" transform="rotate(20 32 32)"/><ellipse cx="32" cy="32" rx="12" ry="26" transform="rotate(-20 32 32)"/></g></svg>'>
 <!-- Leaflet & plugins (com defer) -->
@@ -4535,3 +4535,4 @@ font:12px system-ui,-apple-system,Segoe UI,Roboto">
   });
 })();
 </script>
+
