--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     #searchBox{flex:1;min-width:0}
     #searchBtn,#gpsBtn{white-space:nowrap}
 
-    #pixCard{position:fixed;right:16px;bottom:16px;z-index:2001;width:300px;background:#fff;border:1px solid var(--card-border);border-radius:10px;box-shadow:0 18px 40px rgba(16,24,40,.18),0 4px 14px rgba(16,24,40,.08);display:none;overflow:hidden;animation:pixIn .5s ease}
+    #pixCard{position:fixed;right:16px;bottom:90px;z-index:2001;width:300px;background:#fff;border:1px solid var(--card-border);border-radius:10px;box-shadow:0 18px 40px rgba(16,24,40,.18),0 4px 14px rgba(16,24,40,.08);display:none;overflow:hidden;animation:pixIn .5s ease}
     @keyframes pixIn{from{opacity:0;transform:translateY(8px)}to{opacity:1;transform:translateY(0)}}
     #pixCard header{background:linear-gradient(90deg,var(--brand-blue),var(--brand-blue-dark));color:#fff;padding:12px;display:flex;align-items:center;justify-content:space-between}
     #pixCard .title{font-weight:800;letter-spacing:.2px}
@@ -214,7 +214,7 @@
     #pixCard .kv{display:flex;gap:8px;margin:4px 0}
     #pixCard .k{width:96px;color:#64748b}
     #pixCard .v{flex:1;word-break:break-word}
-    #pixClose{background:rgba(255,255,255,.22);border:0;color:#fff;padding:6px 8px;border-radius:8px;cursor:pointer}
+    #pixClose{background:rgba(255,0,0);border:0;color:#ffffff;padding:6px 8px;border-radius:8px;cursor:pointer}
     #pixActions{display:flex;gap:8px;margin-top:10px}
     #pixActions .btn{flex:1}
     .chip{display:inline-flex;align-items:center;gap:6px;padding:6px 8px;background:#f1f5ff;border:1px solid #e2e8ff;color:#1d4ed8;border-radius:8px;font-weight:600;font-size:12px}
@@ -650,8 +650,7 @@
 <button id="pixClose" title="Fechar"><i class="fa-solid fa-xmark"></i></button>
 </header>
 <div class="body">
-<div class="chip"><i class="fa-solid fa-bolt"></i> PIX instantâneo</div>
-<div class="qr" style="margin-top:30px"><div aria-hidden="true" id="pixQrBox"></div></div>
+<div class="qr" style="margin-top:10px"><div aria-hidden="true" id="pixQrBox"></div></div>
 <div class="kvs">
 <div class="kv"><div class="k">Ou use a chave</div><div class="v"><b>Chave Pix</b> — <em>Chave Aleatória</em></div></div>
 <div class="kv"><div class="k">Nome</div><div class="v">Rafael Lima Oliveira</div></div>
@@ -4535,4 +4534,3 @@ font:12px system-ui,-apple-system,Segoe UI,Roboto">
   });
 })();
 </script>
-
